<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="bottom|center_horizontal">

            <ImageView
                android:id="@+id/icBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_marginStart="30dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0dp"/>

            <ImageView
                android:id="@+id/icLove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart"
                android:layout_marginEnd="30dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="NestedWeights"/>

                    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                        android:id="@+id/dotsx"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:dotsSize="10dp"  />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/veggie_ntomato_mix"
                        android:fontFamily="@font/semi_bold"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textAllCaps="false"/>

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n1_900"
                        android:fontFamily="@font/bold"
                        android:textColor="#FA4A0C"
                        android:textSize="22sp"
                        android:textAllCaps="false"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical"
                        android:paddingStart="50dp"
                        android:paddingEnd="50dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/semi_bold"
                            android:textSize="17sp"
                            android:textColor="@color/black"
                            android:textAllCaps="false"
                            android:text="@string/str_delivery_info"/>

                        <TextView
                            android:id="@+id/tvDeliveryInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/semi_bold"
                            android:textSize="15sp"
                            android:textAllCaps="false"
                            android:text="@string/delivery_info"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/semi_bold"
                            android:textSize="17sp"
                            android:layout_marginTop="20dp"
                            android:textColor="@color/black"
                            android:textAllCaps="false"
                            android:text="@string/str_return_policy"/>

                        <TextView
                            android:id="@+id/tvReturnPolice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/semi_bold"
                            android:textSize="15sp"
                            android:textAllCaps="false"
                            android:text="@string/return_policy"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/round_qirmiz"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/semi_bold"
            android:textSize="17sp"/>

    </LinearLayout>

</FrameLayout>